--- a/tabify.html
+++ b/tabify.html
@@ -10,10 +10,10 @@
     <tbody>
         <tr>
             <td>
-                <textarea id="SourceText" style="width:49vw;height:90vh"></textarea>
+                <textarea id="SourceText" spellcheck="false" style="width:49vw;height:90vh"></textarea>
             </td>
             <td>
-                <textarea id="TargetText" style="width:49vw;height:90vh"></textarea>
+                <textarea id="TargetText" spellcheck="false" style="width:49vw;height:90vh"></textarea>
             </td>
         </tr>
         <tr>
